examples: add simple program to control volumes per role
by sending messages to the media-session via its socket

--- a/src/examples/meson.build
+++ b/src/examples/meson.build
@@ -31,6 +31,12 @@ executable('pipewire-media-session',
   dependencies : [pipewire_dep, mathlib],
 )
 
+executable('session-volume',
+  'session-volume.c',
+  c_args : [ '-D_GNU_SOURCE' ],
+  install: false,
+)
+
 if sdl_dep.found()
   executable('video-play',
     'video-play.c',
