--- a/meson_options.txt
+++ b/meson_options.txt
@@ -65,7 +65,7 @@ option('support',
 option('test',
        description: 'Enable test spa plugin integration',
        type: 'boolean',
-       value: false)
+       value: true)
 option('v4l2',
        description: 'Enable v4l2 spa plugin integration',
        type: 'boolean',
