--- a/spa/plugins/bluez5/meson.build
+++ b/spa/plugins/bluez5/meson.build
@@ -2,6 +2,8 @@
 bluez5_sources = ['plugin.c',
 		  'a2dp-sink.c',
 		  'a2dp-source.c',
+		  'hsp-sink.c',
+		  'hsp-source.c',
 		  'bluez5-device.c',
                   'bluez5-monitor.c']
 
