extensions: implement new session manager extension
This extension, implemented in module-session-manager, implements
a set of objects that are useful for session managers.

--- a/src/extensions/meson.build
+++ b/src/extensions/meson.build
@@ -1,6 +1,10 @@
 pipewire_ext_headers = [
   'client-node.h',
   'protocol-native.h',
+  'session-manager.h',
+  'session-manager/impl-interfaces.h',
+  'session-manager/interfaces.h',
+  'session-manager/introspect.h',
 ]
 
 install_headers(pipewire_ext_headers, subdir : 'pipewire/extensions')
